
  * Fix estimated install copying time. We no longer use cpio to do the
    copying, but instead do the whole thing in-process. This lets us avoid
    buffering issues.
  * Avoid a long pause without any info message while updating apt's indices
    before downloading language packs.
  * GTK frontend:
    - Enlarge primary text in progress windows, per the GNOME HIG.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 27 Mar 2006 13:38:44 +0100

espresso (0.99.34) dapper; urgency=low

  * GTK frontend:
    - Remove remaining Spanish strings. Make some of these translatable
      using existing strings in partman; the rest will follow later.
    - In manual partitioning, only mark partitions automatically mounted on
      swap, /, /usr, /var, or /boot to be reformatted by default.
    - Honour the desired type of a filesystem newly created in gparted in
      preference to its current detected type.
    - If a newly-created filesystem is selected, disable the Reformat
      checkbox and force it on, as it makes no sense off.
  * Exempt swap from duplicate mountpoint checks (part of Malone #34465).
  * Fix crash when reporting that a partition is too small.
  * Make the estimated install copying time a bit less madly wrong (it was
    estimating based on the total file size rather than the amount left to
    copy), although I think buffering on cpio's stdin is still causing it to
    be pretty badly out most of the time.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 24 Mar 2006 20:00:34 +0000

espresso (0.99.33) dapper; urgency=low

  [ Colin Watson ]
  * GTK frontend:
    - Only add new mountpoint table rows if all current rows have been
      filled (closes: Malone #34922).
    - Fix widget names in mount point error handling (closes: Malone
      #36154).
    - Cope with the keyboard selector having no row selected.
    - Cope with getting set_keyboard and set_keyboard_choices in either
      order.
    - Change "Format?" to "Reformat?" in mountpoint table.
