@@ -7,6 +7,8 @@ espresso (0.99.35) UNRELEASED; urgency=low
     before downloading language packs.
   * GTK frontend:
     - Enlarge primary text in progress windows, per the GNOME HIG.
+    - Turn debconf progress dialog into a normal progress window, since it
+      doesn't have any buttons.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 27 Mar 2006 13:38:44 +0100
 
